--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <header class="header-cont">
-      <div class="container">
+    <header class="page-header">
+      <div class="container header-cont">
         <nav class="header-cont-nav">
           <a class="h-logo" href="./index.html"
             >Web<span class="h-logo-s">Studio</span>
@@ -34,6 +34,7 @@
             <li><a href="" class="header-list-item">Contacts</a></li>
           </ul>
         </nav>
+
         <address class="address-cont">
           <ul class="address-cont-list">
             <li>
@@ -48,17 +49,22 @@
             </li>
           </ul>
         </address>
+        <button class="burger-btn" type="button">
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
-      <section class="main-page-cont">
+      <section class="hidden">
         <div class="container">
           <h1 class="main-page-title">Effective Solutions for Your Business</h1>
           <button class="main-page-button" type="button">Order Service</button>
         </div>
       </section>
 
-      <section class="advan-cont">
+      <section class="hidden">
         <div class="container">
           <h2 class="visually-hidden"></h2>
           <ul class="advan-list">
@@ -117,7 +123,7 @@
         </div>
       </section>
 
-      <section class="team-cont">
+      <section class="hidden">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -304,7 +310,7 @@
         </div>
       </section>
 
-      <section class="port-cont">
+      <section class="hidden">
         <div class="container">
           <h2 class="port-title">Our Portfolio</h2>
           <ul class="port-list">
@@ -443,7 +449,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer-cont">
+    <footer class="hidden">
       <div class="f-container container">
         <div class="f-logo-cont">
           <a class="f-logo" href="./index.html"
@@ -507,7 +513,7 @@
       </div>
     </footer>
 
-    <div class="modal-overlay is-open">
+    <div class="hidden">
       <div class="modal">
         <button type="button" class="modal-button">
           <svg class="icon-cross" width="8" height="8">
