Update style.css/responsive design/ for main page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </header>
     <main>
-      <section class="hidden">
+      <section class="main-page-cont">
         <div class="container">
           <h1 class="main-page-title">Effective Solutions for Your Business</h1>
           <button class="main-page-button" type="button">Order Service</button>
