--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
       </section>
 
-      <section class="hidden">
+      <section class="advan-cont">
         <div class="container">
           <h2 class="visually-hidden"></h2>
           <ul class="advan-list">
