--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
       </section>
 
-      <section class="hidden">
+      <section class="team-cont">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
