Update style.css/responsive design/ for portfolio cont

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         </div>
       </section>
 
-      <section class="hidden">
+      <section class="port-cont">
         <div class="container">
           <h2 class="port-title">Our Portfolio</h2>
           <ul class="port-list">
