Update style.css/responsive design/ for footer cont

--- a/index.html
+++ b/index.html
@@ -449,8 +449,8 @@
         </div>
       </section>
     </main>
-    <footer class="hidden">
-      <div class="f-container container">
+    <footer class="footer-cont">
+      <div class="f-cont container">
         <div class="f-logo-cont">
           <a class="f-logo" href="./index.html"
             >Web<span class="f-logo-sp">Studio</span></a
@@ -502,6 +502,7 @@
                 type="email"
                 name="email"
                 placeholder="E-mail"
+                autocomplete="on"
             /></label>
             <button class="footer-button" type="submit">
               Subscribe<svg class="f-form-icon" width="24" height="24">
